@@ -20,6 +20,7 @@ systemd System and Service Manager
  	- remove “bus_kernel_create_domain” function;
  	- remove “bus_event_loop_with_idle” function;
  	- remove “sd_bus_try_close” function;
+ 	- remove “bus_remove_match_internal_kernel” function;
  * loginctl:
  	- remove “machine” argument option;
  * systemd-analyze:
